tests/tmytests/bad/two_dim_arr_mth.lat
class Test {
    int[][] f() {
        return (int[][]) null;
    }
}

int main() {
    Test t;
    return 0;
}